Stop invisible notification area around notifications from blocking click events

--- a/src/components/Notification/Notification.scss
+++ b/src/components/Notification/Notification.scss
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
 
+  pointer-events: all;
 
   transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
   transform-origin: bottom;
