--- a/src/components/NotificationArea/NotificationArea.scss
+++ b/src/components/NotificationArea/NotificationArea.scss
@@ -9,4 +9,6 @@
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+
+  pointer-events: none;
 }
